# -AFIMS-R

./: AFIMS_GOVERNANCE_V3_1_VS_V3_2.json  AFIMS_GOVERNANCE_V3_1_VS_V3_2.md  AFIMS_LOCAL_INFRASTRUCTURE_PREFLIGHT.json  AFIMS_LOCAL_INFRASTRUCTURE_PREFLIGHT.md  AFIMS_LOCAL_TRUST_ISLAND_PLAN.json  AFIMS_LOCAL_TRUST_ISLAND_PLAN.md  AFIMS_MINIO_DEPLOYMENT_REPORT.json  AFIMS_MINIO_DEPLOYMENT_REPORT.md  AFIMS_REMEDIATED_IMAGE_SBOM.spdx.json  AFIMS_RUNNER_INTEGRATION_REPORT.json  AFIMS_RUNNER_INTEGRATION_REPORT.md  AFIMS_SECRET_INCIDENT_REPORT.json  AFIMS_SECRET_INCIDENT_REPORT.md  AFIMS_TRIVY_DB_METADATA.json  AFIMS_TRIVY_EXACT_IMAGE_REPORT.json  AFIMS_TRIVY_EXACT_IMAGE_REPORT.txt  AFIMS_TRIVY_FAILURE_ANALYSIS.json  AFIMS_TRIVY_FAILURE_ANALYSIS.md  AFIMS_TRIVY_REMEDIATED_IMAGE_REPORT.json  AFIMS_T_V3_1_VERIFICATION_REPORT.json  AFIMS_T_V3_1_VERIFICATION_REPORT.md  Dockerfile  EXTERNAL_EVIDENCE_REPORT.json  EXTERNAL_EVIDENCE_REPORT.md  EXTERNAL_GATE_PREFLIGHT.json  EXTERNAL_GATE_PREFLIGHT.md  README.md  RELEASE_MANIFEST.json  SHA256SUMS.txt  TEST_REPORT.txt  VERIFY_L3_RELEASE.md  docker-compose.yml  pyproject.toml
afims_r/: api.py  certifier.py  cli.py  engine.py  extraction.py  final_confidence.py  fixture_evaluator.py  governance_adapter.py  hashing.py  metrics.py  models.py  release_verification.py  suite_certifier.py  validators.py
docs/: RELEASE_GOVERNANCE.md  RISK_REGISTER.md
evidence/: EVIDENCE_MANIFEST.json
examples/: request.json
fixtures/: afims_t_cases.json
policies/: strict_preservation_v1.yaml
registry/: afims_t_mapping.json  rules.json
(+157 files in other folders)
